---------------------------------------------------------------------------------------------------
Version: 3.2.7
Date: ????
  Changes:
    - Lower omnicium for omnitors from 4 to 2
    - Lowe oomnicium for burner mining drills from 4 to 2
  Bugfixes:
    - Fixed Angel and bobs early burner entities fuel category not being updated
---------------------------------------------------------------------------------------------------
Version: 3.2.6
Date: 2026-01-03
  Changes:
    - Updated compat for Angelsmods
    - Updated compat for Krastorio 2
---------------------------------------------------------------------------------------------------
Version: 3.2.5
Date: 2026-01-02
  Changes:
    - Updated compat for bobsmods
---------------------------------------------------------------------------------------------------
Version: 3.2.4
Date: 2024.12.13
  Bugfixes:
    - Updated for factorio 2.0.15 introducing initial_fuel to burner entities
---------------------------------------------------------------------------------------------------
Version: 3.2.3
Date: 2024.11.26
  Bugfixes:
    - Fixed that the scale of omnium and iron power poles was too big
---------------------------------------------------------------------------------------------------
Version: 3.2.2
Date: 2024.11.24
  Bugfixes:
    - Fixed that some entities had no or too big animations set
---------------------------------------------------------------------------------------------------
Version: 3.2.1
Date: 2024.11.23
  Changes:
    - Updated graphics definition for omnilib 4.2.2
---------------------------------------------------------------------------------------------------
Version: 3.2.0
Date: 2024.11.19
  Changes:
    - Updated for factorio 2.0
---------------------------------------------------------------------------------------------------
Version: 3.1.19
Date: ????
  Changes:
    - Updated basic transport belt icons + sprites