@@ -6,6 +6,7 @@ Date: ????
     - Lowe oomnicium for burner mining drills from 4 to 2
   Bugfixes:
     - Fixed Angel and bobs early burner entities fuel category not being updated
+    - Fixed Bob basic transport belt existing besides the omnienergy basix transport belt
 ---------------------------------------------------------------------------------------------------
 Version: 3.2.6
 Date: 2026-01-03
